--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <title>My Teammates</title>
+    <title>My teammates</title>
 </head>
 
 <body class="body">
@@ -40,7 +40,6 @@
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div id="modal-content" class="modal-content">
-
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -57,7 +56,6 @@
                         <button type="button" class="btn red btn-danger" data-dismiss="modal">Close</button>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -75,4 +73,5 @@
         crossorigin="anonymous"></script>
     <script src="/scripts/main.js"></script>
 </body>
+
 </html>
