--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="/images/ubicon.png">
+    <link rel="icon" href="./images/ubicon.png">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 <body class="body">
     <header id="head">
         <h1 class="title">My teammates</h1>
-        <img class="logo" src="/images/logo.png" alt="logo">
+        <img class="logo" src="./images/logo.png" alt="logo">
     </header>
     <div id="loader">
         <img class="loader" src="images/ubicon.png">
@@ -71,7 +71,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
